--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -16,10 +16,10 @@ jobs:
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
       - name: Build Docker image
-        run: docker build -t <docker-username>/<image-name>:latest .
+        run: docker build -t blackazakh/midt:latest .
 
       - name: Push Docker image to Docker Hub
-        run: docker push <docker-username>/<image-name>:latest
+        run: docker push blackazakh/midt:latest
 
   deploy:
     needs: build
@@ -28,6 +28,6 @@ jobs:
       - name: Deploy to EC2
         run: |
           ssh -o StrictHostKeyChecking=no -i key.pem ec2-user@<EC2-IP> <<EOF
-          docker pull <docker-username>/<image-name>:latest
-          docker run -d -p 80:80 <docker-username>/<image-name>:latest
+          docker pull blackazakh/midt:latest
+          docker run -d -p 80:80 blackazakh/midt:latest
           EOF
