--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -27,7 +27,7 @@ jobs:
     steps:
       - name: Deploy to EC2
         run: |
-          ssh -o StrictHostKeyChecking=no -i key.pem ec2-user@<EC2-IP> <<EOF
+          ssh -i key.pem ec2-user@<16.171.160.69> <<EOF
           docker pull bahalek/midt:latest
           docker run -d -p 80:80 bahalek/midt:latest
           EOF
