--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -25,9 +25,14 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
-      - name: Deploy to EC2
-        run: |
-          ssh -o StrictHostKeyChecking=no -i key.pem ec2-user@<16.171.160.69> <<EOF
-          docker pull bahalek/midt:latest
-          docker run -d -p 80:80 bahalek/midt:latest
-          EOF
+      - name: Run Docker container on EC2
+        uses: appleboy/ssh-action@v0.1.4
+        with:
+          host: ${{ secrets.AWS_EC2_HOST }}
+          username: ${{ secrets.AWS_EC2_USERNAME }}
+          key: ${{ secrets.AWS_PRIVATE_KEY }}
+          script: |
+            docker stop flask-app  true
+            docker rm flask-app  true
+            docker pull 220103141/flask-app:latest
+            docker run -d -p 5000:5000 --name flask-app 220103141/flask-app:latest
